# civetweb

./: .clang-format  .gitattributes  .gitignore  .travis.yml  C PROGRAM  CMakeLists.txt  CREDITS.md  Dockerfile  Emedding.md  LICENSE  LICENSE.md  LICENSE.md5  LICENSE.sqlite3  Makefile  Makefile.deprecated  Makefile.osx  README.md  RELEASE_NOTES.md  ReleaseNotes.md  SECURITY.md  UserManual.md  appveyor.yml  appveyor.yml.bkup  build  build.cmd  build.sh  civetweb.c  civetweb.h  civetweb_test  codecov.yml  conanfile.py  format.bat  main.c  mingw.cmd  mod_lua.inl  run.sh  test_travis.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: cibuild.yml  cifuzz.yml  codeql-analysis.yml  codeql-buildscript.sh  codeql.yml  fail_on_error.py
.travis/: install_rocks.sh  lua_env.sh  run_ci_tests.sh  setup_lua.sh
Qt/: CivetWeb.pro
VS2012/: civetweb.sln  civetweb32.aip  civetweb64.aip
VS2012/civetweb/: civetweb.vcxproj  civetweb.vcxproj.filters
VS2012/civetweb_lua/: civetweb_lua.vcxproj  civetweb_lua.vcxproj.filters
VS2012/civetweb_yassl/: civetweb_yassl.sln
VS2012/duktape_lib/: duktape_lib.vcxproj  duktape_lib.vcxproj.filters
VS2012/ex_embed_cpp/: ex_embed_cpp.vcxproj  ex_embed_cpp.vcxproj.filters
VS2012/ex_embedded_c/: ex_embedded_c.vcxproj
VS2012/ex_websocket/: ex_websocket.vcxproj  ex_websocket.vcxproj.filters
VS2012/ex_websocket_client/: ex_websocket_client.vcxproj
VS2012/innosetup/: civetweb32_setup.iss  civetweb64_setup.iss
VS2012/lua_lib/: lua_lib.vcxproj  lua_lib.vcxproj.filters
VS2012/unit_test/: unit_test.vcxproj  unit_test.vcxproj.filters
VS2012/upload/: upload.vcxproj  upload.vcxproj.filters
VS2015/: civetweb.sln
VS2015/Browser/: Browser.vcxproj
VS2015/civetweb_lua/: civetweb_lua.vcxproj
VS2015/civetweb_yassl/: civetweb_yassl.sln
VS2015/ex_embed_cpp/: ex_embed_cpp.vcxproj  ex_embed_cpp.vcxproj.filters
VS2015/ex_embedded_c/: ex_embedded_c.vcxproj
VS2015/ex_websocket/: ex_websocket.vcxproj
VS2015/ex_websocket_client/: ex_websocket_client.vcxproj
VS2015/lua_lib/: lua_lib.vcxproj
VS2015/testclient/: testclient.vcxproj
VS2015/testclient2/: testclient2.vcxproj
VS2015/unit_test/: unit_test.vcxproj  unit_test.vcxproj.filters
VS2015/upload/: upload.vcxproj
VisualStudio/: buildRelease.pl  civetweb.sln
VisualStudio/civetweb_lua/: civetweb_lua.vcxproj  civetweb_lua.vcxproj.filters
VisualStudio/duktape_lib/: duktape_lib.vcxproj  duktape_lib.vcxproj.filters
VisualStudio/ex_embed_cpp/: ex_embed_cpp.vcxproj
VisualStudio/ex_embedded_c/: ex_embedded_c.vcxproj  ex_embedded_c.vcxproj.filters
VisualStudio/ex_websocket/: ex_websocket.vcxproj  ex_websocket.vcxproj.filters
ci/test/: README.md  (+1 more)
cmake/: AddCCompilerFlag.cmake  AddCXXCompilerFlag.cmake  FindLibM.cmake  FindWinSock.cmake  civetweb-config.cmake.in  civetweb-cpp.pc.in  civetweb.pc.in
conan/: build.py
cpp/: CivetServer.cpp  CivetServer.h  Makefile  example.cpp
docs/: APIReference.md  Building.md  Contribution.md  Docker.md  Embedding.md  Installing.md  Interface_Changes_1.10.md  OpenSSL.md  README.md  UserManual.md  gnutls.md  mbedtls.md  yaSSL.md
examples/: Makefile  README.md  handle_form_data.lua  hello.c  post.c  upload.c  websocket.c
examples/linux_ws_server_cpp/: CMakeLists.txt  README.md  main.cc
fuzz/: fuzzmain.c
fuzztest/: README.txt  build.sh  build_and_run.sh  build_with_all.sh  fuzzmain.c  http1.dict
include/: CivetServer.h  civetweb.h
mbedlib/: libmbedcrypto.so.0  libmbedcrypto.so.2  libmbedcrypto.so.3  libmbedcrypto.so.4  libmbedtls.so.10  libmbedtls.so.12  libmbedtls.so.13  libmbedtls.so.8  libmbedx509.so.0  libmbedx509.so.1
mbedtls/: config.h
resources/: Makefile.in-duktape  Makefile.in-lua  Makefile.in-os  check_defines.lua  civetweb.conf  cleanup.lua  complete.lua  coverity_check.sh  dll.def  itworks.html  used_defines.txt
src/: CMakeLists.txt  CivetServer.cpp  civetweb.c  civetweb_private_lua.h  dyn_timer.inl  file_ops.inl  handle_form.inl  http2.inl  lua_civet.h  main.c  match.inl  md5.inl  mod_duktape.inl  mod_gnutls.inl  mod_http2.inl  mod_lua.inl  mod_lua_shared.inl  mod_mbedtls.inl  mod_zlib.inl  openssl_dl.inl  response.inl  sha1.inl  sort.inl  timer.inl  timer_test.inl
src/web_resources/: index.html
src/web_servlets/: Makefile  servlets.c  servlets.h
src/web_servlets/about/: Makefile
src/web_servlets/auth/: auth.h  login.c
src/web_servlets/kitasuna/: include  lib
test/: 10000images.lua  1000images.lua  100images.htm  CMakeLists.txt  HugeText.lua  MakefileTest.mk  MethodTest.xhtml  README.md  background.lua  bad.cgi  bad_page.lp  bad_script.lua  cgi_test.html  civetweb_check.h  cors.html  cors.reply.html  cors.reply.lua  delayed.cgi  donate.html  echo.lua  embed.c  error.lua  error4xx.htm  exit.lua  filehandler.lua  flush.php  form.html  handle_form.lua  hello.cgi  hello.shtml  hello_gz_unzipped.txt  html_esc.lua  json.lua  linux.cgi  linux_fail.cgi  linux_fail_silent.cgi  linux_stderr.cgi  lua_backbround_script_logging.lua  lua_backbround_script_timer.lua  lua_preload_file.lua  (+62 more)
test/access/: .htpasswd
test/ajax/: echo.cgi  echo.lp  echo.lsp  echo.lua  jquery.js  test.html
test/canvasdir/: canvas.js  index.xhtml  style.css
test/cgidir/: test-crlf.cgi  test-lf.cgi
test/ci_test_basic/: test_test.lua  test_test2.lua
test/ci_tests/: civet.lua  test_spec.lua
test/ci_tests/01_basic/: basic_spec.lua
test/dir with spaces/: file with spaces.txt  r&d.txt  x\y.txt
test/htmldir/: index.html  script.js  style.css
test/luarest/api/1/sensors/: index.lua
test/nonlatin/: 这是一个示例文本.html  𞤀𞤣𞤤𞤢𞤥 𞤆𞤵𞤤𞤢𞤪.txt
test/protected/: .htpasswd  content.txt
test/python_cgi/: pytest.linux.cgi
test/scriptdir/: index.lua
test/svgdir/: index.xhtml
testutils/: readme.txt
unittest/: CMakeLists.txt  build_and_run.sh  build_and_test_default.sh  build_and_test_full.sh  build_and_test_minimal.sh  civetweb_check.h  main.c  private.c  private.h  private_exe.c  private_exe.h  public_func.c  public_func.h  public_server.c  public_server.h  shared.c  shared.h  timertest.c  timertest.h
(+184 files in other folders)
